--- a/src/app/model-page/model-page.component.html
+++ b/src/app/model-page/model-page.component.html
@@ -74,8 +74,8 @@
                     </div>
                 </div>
 
-                <button class="Vider" type="button" (click)="resetFilters()">Limpar</button>
-                <button class="Valider" type="button" class="btn-filter" (click)="applyFilters()">Filtrar</button>
+                <button class="Vider" type="button" (click)="resetFilters()">Vider</button>
+                <button class="Valider" type="button" class="btn-filter" (click)="applyFilters()">Filtrer</button>
 
             </form>
         </div>
@@ -107,29 +107,4 @@
 
 
 
-<section class="contact-section">
-    <div class="form-container">
-        <div class="form-header">
-            <h2>Cherchez-vous<br>un modèle spécifique ?</h2>
-            <p>Laissez votre contact afin que notre équipe puisse vous recontacter !</p>
-        </div>
-
-        <form class="contact-form">
-            <div class="form-fields">
-                <input type="text" placeholder="Modèle">
-                <input type="text" placeholder="Nom">
-                <input type="email" placeholder="E-mail">
-                <input type="tel" placeholder="Número">
-                <button type="submit">Envoyer</button>
-            </div>
-
-            <div class="form-disclaimer">
-                <p>
-                    ☐Lors de la planification avec le MAGASIN, j'accepte de recevoir d'une manière ou d'une autre
-                    que Huang Car me contacte personnellement uniquement lors de la vente de véhicules avec le texte
-                    de modalité hybride.
-                </p>
-            </div>
-        </form>
-    </div>
-</section>
+<app-form-reseach-page></app-form-reseach-page>
