--- a/src/app/model-page/model-page.component.scss
+++ b/src/app/model-page/model-page.component.scss
@@ -185,46 +185,46 @@
 // 
 // 
 
-.contact-form{
-    width: 100%;    
-    height: auto;
-    border: 3px rgba(0,0,0,0.1) solid;
-    border-radius:20px ;
-  }
+// .contact-form{
+//     width: 100%;    
+//     height: auto;
+//     border: 3px rgba(0,0,0,0.1) solid;
+//     border-radius:20px ;
+//   }
   
-  .contact-section {
-    padding: 2rem;
-    justify-content: center;
-    font-family: "poppins" ,sans-serif;
-    width: 70%;
-    margin: auto;
-    margin-bottom: 7%;
-  }
-  .form-fields{
-    margin-top: 60px;
-    width: 90%;
-    margin: 5% auto;
-  }
-  .form-header h2 {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    line-height: 1.2;
-  }
+//   .contact-section {
+//     padding: 2rem;
+//     justify-content: center;
+//     font-family: "poppins" ,sans-serif;
+//     width: 70%;
+//     margin: auto;
+//     margin-bottom: 7%;
+//   }
+//   .form-fields{
+//     margin-top: 60px;
+//     width: 90%;
+//     margin: 5% auto;
+//   }
+//   .form-header h2 {
+//     font-size: 2rem;
+//     font-weight: bold;
+//     margin-bottom: 0.5rem;
+//     line-height: 1.2;
+//   }
   
-  .form-header p {
-    color: #666;
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 2rem;
-  }
+//   .form-header p {
+//     color: #666;
+//     font-size: 18px;
+//     font-weight: 400;
+//     margin-bottom: 2rem;
+//   }
   
-  .form-fields {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    margin-bottom: 1rem;
-  }
+//   .form-fields {
+//     display: flex;
+//     flex-wrap: wrap;
+//     gap: 1.5rem;
+//     margin-bottom: 1rem;
+//   }
   .filter-section button{
     border-radius: 8px;
     padding: 14px 20px;
