--- a/src/app/detailsmodels-page/detailsmodels-page.component.scss
+++ b/src/app/detailsmodels-page/detailsmodels-page.component.scss
@@ -34,7 +34,7 @@
   }
   
   .brand {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: #6e6e6e;
     font-weight: 600;
     text-transform: uppercase;
@@ -219,188 +219,28 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
+    margin-left: 8%;
+    border: 2px solid rgb(223, 223, 223) ;
+    border-radius: 20px;
+    padding: 40px 40px;
   }
   
-  .detailsSection p {
-    margin: 0.5rem 0;
+  .detailsSection  {
+    margin-left: 8%;
+    border: 2px solid rgb(223, 223, 223) ;
+    border-radius: 20px;
+    padding: 40px 40px;
   }
-  
-  
-  .contact-form{
-    width: 100%;    
-    height: auto;
-    border: 3px rgba(0,0,0,0.1) solid;
-    border-radius:20px ;
-  }
-  
-  .contact-section {
-    padding: 2rem;
-    justify-content: center;
-    font-family: "poppins" ,sans-serif;
-    width: 70%;
-    margin: auto;
-    margin-bottom: 7%;
-  }
-  .form-fields{
-    margin-top: 60px;
-    width: 90%;
-    margin: 5% auto;
-  }
-  .form-header h2 {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    line-height: 1.2;
-  }
-  
-  .form-header p {
-    color: #666;
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 2rem;
-  }
-  
-  .form-fields {
+  .navigation-buttons {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    margin-bottom: 1rem;
+    align-items: center;
+    gap:10px;
   }
   
-  .contact-form input {
-    width: 16%;
-    padding: 0.8rem;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    font-size: 18px;
-    font-style: normal;
-    font-family: "poppins",sans-serif;
-    
-  }
-  .navigation-buttons{
-    gap: 10px;
-    display: flex;
-  }
-  
-  @media (max-width : 2000px){
-    .contact-form input {
-        width: 14% !important;
-    }
-
-  }
-  .form-fields input:focus {
-    outline: none;
-    border-color: #333;
-  }
-  
-  .form-fields button {
-    padding: 0.8rem 2rem;
-    background: black;
-    color: gray ;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: 600;
-    width: 20%;
-    font-family: 'poppins' , sans-serif;
-  }
-  
-  .form-fields button:hover {
-    background: #333;
-  }
-  
-  .form-disclaimer p {
-    color: #666;
-    font-size: 15px;
-    display: block;
-    
-  }
-  .form-disclaimer  {
-    width: 90%;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 60px;
-    
-  }
   
   // style création de compte
-  /* Modale */
-.modal {
-  display: none;
-  font-family: "poppins",sans-serif;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  justify-content: center;
-  align-items: center;
-}
-
-.modal.show {
-  display: flex;
-}
-
-.modal-content {
-  background: #fff;
-  border-radius: 20px;
-  padding: 20px 20px;
-  width: 90%;
-  max-width: 600px;
-  position: relative;
-  animation: fadeIn 0.3s ease-in-out;
-  
-}
-
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background: transparent;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-/* Navigation Buttons */
-button {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  font-weight: 500;
-  font-family: 'poppins' ,sans-serif;
-}
-
-.next-button, .submit-button {
-  background: black;
-  color: white;
-}
-
-.prev-button {
-  background: gray;
-  color: white;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  color: gray;
-}
-
-input {
-  width: 95%;
-  margin: auto;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: gray;
-  margin-bottom: 15px;
-  font-family: 'poppins',sans-serif;
-}
-
+ 
 /* Animation */
 @keyframes fadeIn {
   from {
